# esp32_LCD2004_menu_sub_menu

./: CMakeLists.txt
components/HD44780/: CMakeLists.txt  HD44780.c
components/HD44780/include/: HD44780.h
main/: CMakeLists.txt  EXTERNAL_FUNC.h  GLOB_VAR.h  elec_parts_task.c  main.c  nvs_function.c
