idf_component_register(SRCS "HD44780.c" INCLUDE_DIRS "include" REQUIRES "driver")
# set(EXTRA_COMPONENT_DIRS C:/ESP_test/esp32-i2c-lcd1602-example-master/components/esp32-smbus)

# set(COMPONENT_ADD_INCLUDEDIRS include)
# set(COMPONENT_SRCDIRS ".")
#  set(COMPONENT_PRIV_REQUIRES "esp32-smbus")
# register_component()

